tests/functional/lang/parse-fail-unexpected-with.err.exp
error: syntax error, unexpected 'with', expecting identifier or 'or' or '${' or '"'
       at «stdin»:1:3:
            1| a.with
             |   ^
            2|
